--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Rennes LE Vélo STAR</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Rennes Le Velo STAR</string>
+    <string name="title_activity_maps">Rennes Le Vélo STAR</string>
+    <string name="title_activity_maps2">Rennes Le Vélo STAR</string>
 </resources>
